[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["ChaejinE <joung6517@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
transformers = "^4.45.2"
pillow = "^10.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
